# roid

./: .gitmodules  Cargo.toml  LICENSE  README.md  example-Roid.toml  test-config.toml
src/: bin.rs  build.rs  cmd.rs  config.rs  device.rs  install.rs  main.rs  project.rs
