[package]
name = "roid"
authors = ["Jackson G. Kaindume <seestem@merely.tech>"]
description = "Android Developer Toolkit"
version = "0.1.1"
edition = "2018"
license = "MIT"
license-file = "LICENSE"
keywords = ["android", "sdk", "developer", "toolkit"]
categories = ["development-tools::build-utils"]
exclude = ["project-templates"]
homepage = "https://github.com/cy6erlion/roid"
repository = "https://github.com/cy6erlion/roid"
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
toml = "0.5"
serde = { version = "1.0.126", features = ["derive"] }
dirs = "4.0.0"